add native platform, fix stable state